Index and Details

--- a/contact.html
+++ b/contact.html
@@ -22,29 +22,29 @@
       <form id="contactForm">
         <h1>Contact us</h1>
         <div>
-          <label>Full Name</label>
-          <input name="fullName" id="fullName" />
+          <label for="fullname">Full Name</label>
+          <input type="text" name="fullName" id="fullName" />
           <div class="form-error" id="fullNameError">
             Please enter your full name
           </div>
         </div>
         <div>
-          <label>Subject</label>
-          <input name="subject" id="subject" />
+          <label for="subject">Subject</label>
+          <input type="text" name="subject" id="subject" />
           <div class="form-error" id="subjectError">
             The subject must be at least 10 characters
           </div>
         </div>
         <div>
-          <label>Email</label>
-          <input name="email" id="email" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
           <div class="form-error" id="emailError">
             Please enter a valid email address
           </div>
         </div>
         <div>
-          <label>Address</label>
-          <input name="address" id="address" />
+          <label for="address">Address</label>
+          <input type="text" name="address" id="address" />
           <div class="form-error" id="addressError">
             The address must be at least 24 characters
           </div>
@@ -52,6 +52,6 @@
         <button>Submit</button>
       </form>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
