--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS1 Module 4 Lesson Task 4</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="description" content="Details" />
+    <title>Home</title>
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -16,6 +17,15 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="container">
+        <h1>Games</h1>
+        <div class="results">
+          <div class="loader"></div>
+        </div>
+      </div>
+    </main>
+    <script src="js/components/displayError.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
