--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS1 Module 4 Lesson Task 4</title>
+    <title>Game detail</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -16,6 +16,12 @@
         </ul>
       </nav>
     </header>
-    <script src="js/script.js"></script>
+    <main class="container">
+      <div class="game-details">
+        <div class="loader"></div>
+      </div>
+    </main>
+    <script src="js/components/message.js"></script>
+    <script src="js/detail.js"></script>
   </body>
 </html>
